add testing site api with dynamic search string. render names

--- a/CovidWin/CovidWin.csproj
+++ b/CovidWin/CovidWin.csproj
@@ -73,7 +73,13 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.SDK" Version="16.0.206" ExcludeAssets="runtime" />
-    <PackageReference Include="Microsoft.VSSDK.BuildTools" Version="16.8.1015" />
+    <PackageReference Include="Microsoft.VSSDK.BuildTools" Version="16.8.1019">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="RestSharp">
+      <Version>106.11.4</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Page Include="CovidWindowControl.xaml">
